@@ -229,7 +229,7 @@ specifier|static
 name|int
 name|MAX_TEMPFILES
 init|=
-literal|128
+literal|10
 decl_stmt|;
 DECL|field|dir
 specifier|private
@@ -885,6 +885,16 @@ name|ArrayList
 argument_list|<>
 argument_list|()
 decl_stmt|;
+name|int
+index|[]
+name|levelCounts
+init|=
+operator|new
+name|int
+index|[
+literal|1
+index|]
+decl_stmt|;
 comment|// So we can remove any partially written temp files on exception:
 name|TrackingDirectoryWrapper
 name|trackingDir
@@ -958,13 +968,24 @@ name|lineCount
 operator|+=
 name|lineCount
 expr_stmt|;
-comment|// Handle intermediate merges.
-if|if
+name|levelCounts
+index|[
+literal|0
+index|]
+operator|++
+expr_stmt|;
+comment|// Handle intermediate merges; we need a while loop to "cascade" the merge when necessary:
+name|int
+name|mergeLevel
+init|=
+literal|0
+decl_stmt|;
+while|while
 condition|(
-name|segments
-operator|.
-name|size
-argument_list|()
+name|levelCounts
+index|[
+name|mergeLevel
+index|]
 operator|==
 name|maxTempFiles
 condition|)
@@ -976,10 +997,55 @@ argument_list|,
 name|segments
 argument_list|)
 expr_stmt|;
-block|}
-block|}
-comment|// Merge the partitions to the output file with a priority queue.
 if|if
+condition|(
+name|mergeLevel
+operator|+
+literal|2
+operator|>
+name|levelCounts
+operator|.
+name|length
+condition|)
+block|{
+name|levelCounts
+operator|=
+name|ArrayUtil
+operator|.
+name|grow
+argument_list|(
+name|levelCounts
+argument_list|,
+name|mergeLevel
+operator|+
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
+name|levelCounts
+index|[
+name|mergeLevel
+operator|+
+literal|1
+index|]
+operator|++
+expr_stmt|;
+name|levelCounts
+index|[
+name|mergeLevel
+index|]
+operator|=
+literal|0
+expr_stmt|;
+name|mergeLevel
+operator|++
+expr_stmt|;
+block|}
+block|}
+comment|// TODO: we shouldn't have to do this?  Can't we return a merged reader to
+comment|// the caller, who often consumes the result just once, instead?
+comment|// Merge all partitions down to 1 (basically a forceMerge(1)):
+while|while
 condition|(
 name|segments
 operator|.
@@ -1236,7 +1302,7 @@ argument_list|()
 return|;
 block|}
 block|}
-comment|/** Merge a list of sorted temporary files (partitions) into an output file.  Note that this closes the    *  incoming {@link IndexOutput}. */
+comment|/** Merge the most recent {@code maxTempFile} partitions into a new partition. */
 DECL|method|mergePartitions
 name|void
 name|mergePartitions
@@ -1261,6 +1327,49 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|segmentsToMerge
+decl_stmt|;
+if|if
+condition|(
+name|segments
+operator|.
+name|size
+argument_list|()
+operator|>
+name|maxTempFiles
+condition|)
+block|{
+name|segmentsToMerge
+operator|=
+name|segments
+operator|.
+name|subList
+argument_list|(
+name|segments
+operator|.
+name|size
+argument_list|()
+operator|-
+name|maxTempFiles
+argument_list|,
+name|segments
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|segmentsToMerge
+operator|=
+name|segments
+expr_stmt|;
+block|}
 name|PriorityQueue
 argument_list|<
 name|FileAndTop
@@ -1273,7 +1382,7 @@ argument_list|<
 name|FileAndTop
 argument_list|>
 argument_list|(
-name|segments
+name|segmentsToMerge
 operator|.
 name|size
 argument_list|()
@@ -1324,7 +1433,7 @@ init|=
 operator|new
 name|ByteSequencesReader
 index|[
-name|segments
+name|segmentsToMerge
 operator|.
 name|size
 argument_list|()
@@ -1380,7 +1489,7 @@ literal|0
 init|;
 name|i
 operator|<
-name|segments
+name|segmentsToMerge
 operator|.
 name|size
 argument_list|()
@@ -1400,7 +1509,7 @@ name|dir
 operator|.
 name|openInput
 argument_list|(
-name|segments
+name|segmentsToMerge
 operator|.
 name|get
 argument_list|(
@@ -1558,10 +1667,10 @@ name|deleteFiles
 argument_list|(
 name|trackingDir
 argument_list|,
-name|segments
+name|segmentsToMerge
 argument_list|)
 expr_stmt|;
-name|segments
+name|segmentsToMerge
 operator|.
 name|clear
 argument_list|()
