@@ -373,25 +373,6 @@ literal|"2BPoints1D"
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"DIR: "
-operator|+
-operator|(
-operator|(
-name|FSDirectory
-operator|)
-name|dir
-operator|)
-operator|.
-name|getDirectory
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|IndexWriterConfig
 name|iwc
 init|=
@@ -1196,89 +1177,12 @@ name|getCodec
 parameter_list|()
 block|{
 return|return
-operator|new
-name|FilterCodec
-argument_list|(
-literal|"Lucene60"
-argument_list|,
 name|Codec
 operator|.
 name|forName
 argument_list|(
 literal|"Lucene60"
 argument_list|)
-argument_list|)
-block|{
-annotation|@
-name|Override
-specifier|public
-name|PointsFormat
-name|pointsFormat
-parameter_list|()
-block|{
-return|return
-operator|new
-name|PointsFormat
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|PointsWriter
-name|fieldsWriter
-parameter_list|(
-name|SegmentWriteState
-name|writeState
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|int
-name|maxPointsInLeafNode
-init|=
-literal|1024
-decl_stmt|;
-name|double
-name|maxMBSortInHeap
-init|=
-literal|256.0
-decl_stmt|;
-return|return
-operator|new
-name|Lucene60PointsWriter
-argument_list|(
-name|writeState
-argument_list|,
-name|maxPointsInLeafNode
-argument_list|,
-name|maxMBSortInHeap
-argument_list|)
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|PointsReader
-name|fieldsReader
-parameter_list|(
-name|SegmentReadState
-name|readState
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-return|return
-operator|new
-name|Lucene60PointsReader
-argument_list|(
-name|readState
-argument_list|)
-return|;
-block|}
-block|}
-return|;
-block|}
-block|}
 return|;
 block|}
 block|}
