@@ -450,10 +450,6 @@ name|Long
 operator|.
 name|BYTES
 argument_list|,
-literal|1024
-argument_list|,
-literal|256
-argument_list|,
 literal|26L
 operator|*
 name|numDocs
@@ -706,10 +702,6 @@ argument_list|,
 name|Long
 operator|.
 name|BYTES
-argument_list|,
-literal|1024
-argument_list|,
-literal|256
 argument_list|,
 literal|26L
 operator|*
